--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -20,6 +20,8 @@
     <meta name="twitter:description" content="{{ site.description }}">
     <meta name="twitter:image" content="{{ site.avatar }}">
 
+    <base target="_blank" />
+
     <link rel="canonical" href="{{site.canonical}}"/>
     <link rel="icon" media="(prefers-color-scheme:dark)" href="{{ site.favicon_dark }}" type="image/png" />
     <link rel="icon" media="(prefers-color-scheme:light)" href="{{ site.favicon }}" type="image/png" />
@@ -60,7 +62,7 @@
     
     <div class="topnav">
 
-      <a href="{{ site.affiliation_link }}"><img width="190" src="{{ site.affiliation_logo }}"></a>
+      <a href="{{ site.affiliation_link }}"><img width="100" src="{{ site.affiliation_logo }}"></a>
 
       <div id="myLinks">
       {% include navigation.md %}
