--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -225,5 +225,7 @@
       gtag('config', '{{ site.google_analytics }}');
     </script>
     {% endif %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9629931398965594"
+     crossorigin="anonymous"></script>
   </body>
 </html>
