--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -19,6 +19,7 @@
     <meta name="twitter:title" content="{{ site.title }} | {{ site.affiliation }}">
     <meta name="twitter:description" content="{{ site.description }}">
     <meta name="twitter:image" content="{{ site.avatar }}">
+    <meta name="google-adsense-account" content="ca-pub-9629931398965594">
 
     <base target="_blank" />
 
